# formula-binance-atm

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  RSS on windows.md  Trying out things.ipynb  binance_api.py  env.example  fastapi.service  hello.py  installation.md  main.py  manage-services.sh  nginx  nginx-fastapi  notebook.ipynb  package-lock.json  pyproject.toml  requirements.txt  san.cnf  synthetic_stock_data.csv  update-nginx.sh
.github/workflows/: ci.yml
api/: main.py
core/: brokers_api.py
core/strategiez/: operators.py  src_to_rafactor.py
docs/: Candlestick Patterns.md  Harmonic and Geometric Patterns.md
frontend/my-app/: README.md  env.local.example  next.config copy.ts  next.config.ts  nextjs.service  nginx  package-lock.json  package.json
frontend/my-app/app/: page.tsx
frontend/my-app/pages/: chart.tsx  home.tsx
strategiez/: indicators.py  signals.py  src_to_rafactor.py
tests/: Historical_data.csv  generate_random_historical.py  test_calculate.py  test_endpoints.py
ui/: .dockerignore  Dockerfile  package-lock.json  package.json
ui/app/: page.tsx
ui/components/: chart.tsx
ui/my-app/: env.local.example  nextjs.service
ui/my-app/app/: page.tsx
ui/my-app/components/: chart.tsx
ui/my-app/pages/: chart.tsx
ui/types/: types.ts
