[project]
name = "formula-binance-atm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "binance-connector>=3.12.0",
    "fastapi>=0.115.7",
    "pandas>=2.2.3",
    "pip>=25.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
    "websockets>=14.2",
]
